# ai-agent-fastReader

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  v1.0.0
.github/workflows/: build-skill-releases.yml
dev-docs/: architecture.md  current-state.md  goals.md  tech-stack.md  user-stories.md
dev-log/: sprints.md
fastReader/: SKILL.md  cli.py
src/fastReader/: cli.py
src/fastReader/commands/: load.py
test/: test_cli.py  test_load_command.py
